--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
     package="com.handysparksoft.screenlockertile">
 
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:allowBackup="true"
@@ -49,8 +48,17 @@
 
         <service
             android:name=".ScreenLockerService"
+            android:label="@string/app_name"
             android:enabled="true"
-            android:exported="true"/>
+            android:exported="true"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:stopWithTask="false"
+            />
     </application>
-
 </manifest>
+
+<!--
+This app takes as a reference a good part of this posts from Václav Hodek (@vaclavhodek)
+- https://medium.com/localazy/floating-windows-on-android-1-jetpack-compose-room-a4f377c86dd5
+- https://localazy.com/blog/floating-windows-on-android-2-foreground-service
+-->
