--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS" />
 
     <application
         android:allowBackup="true"
@@ -17,6 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ScreenLockerTile"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -30,10 +32,10 @@
 
         <service
             android:name=".ScreenLockerTileService"
-            android:exported="true"
             android:enabled="true"
-            android:label="Screen Locker"
+            android:exported="true"
             android:icon="@drawable/ic_screen_locker_icon"
+            android:label="Screen Locker"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
@@ -49,11 +51,16 @@
 
         <service
             android:name=".ScreenLockerService"
-            android:label="@string/app_name"
             android:enabled="true"
             android:exported="true"
+            android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:stopWithTask="false" />
+
+        <service
+            android:name=".ShakeDetectorService"
+            android:enabled="true"
+            android:exported="true"/>
 
         <receiver
             android:name=".BootReceiver"
