--- a/.gitignore
+++ b/.gitignore
@@ -185,4 +185,8 @@ fabric.properties
 
 !/gradle/wrapper/gradle-wrapper.jar
 
+# My resource files
+resources/
+
+
 # End of https://www.toptal.com/developers/gitignore/api/androidstudio,kotlin,android
