--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,48 @@ buildscript {
     ext {
         compose_version = '1.2.0-alpha05'
     }
+
+    repositories {
+        google()
+        jcenter()
+
+    }
+    dependencies {
+        classpath 'com.diffplug.spotless:spotless-plugin-gradle:5.11.1'
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.0-beta04' apply false
     id 'com.android.library' version '7.2.0-beta04' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'com.diffplug.spotless' version '5.11.1'
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+subprojects {
+    repositories {
+        google()
+        mavenCentral()
+        jcenter()
+    }
+
+    apply plugin: 'com.diffplug.spotless'
+    spotless {
+        kotlin {
+            target '**/*.kt'
+            targetExclude("$buildDir/**/*.kt")
+            targetExclude('bin/**/*.kt')
+
+            ktlint("0.40.0").userData([
+                  android: "true",
+                  'indent_size': '4',
+                  'max_line_length': '124',
+                  'insert_final_newline': 'true',
+                  // 'end_of_line': 'lf',
+                  // 'charset': 'utf-8'
+            ])
+            trimTrailingWhitespace()
+            indentWithSpaces()
+            endWithNewline()
+        }
+    }
 }
