--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.handysparksoft.screenlockertile">
+    package="com.handysparksoft.screentouchlocker">
 
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
@@ -16,13 +16,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ScreenLockerTile"
+        android:theme="@style/Theme.ScreenTouchLocker"
         tools:targetApi="31">
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.handysparksoft.screentouchlocker.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.ScreenLockerTile">
+            android:theme="@style/Theme.ScreenTouchLocker">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,7 +31,7 @@
         </activity>
 
         <service
-            android:name=".ScreenLockerTileService"
+            android:name="com.handysparksoft.screentouchlocker.ScreenTouchLockerTileService"
             android:enabled="true"
             android:exported="true"
             android:icon="@drawable/ic_screen_locker_icon"
@@ -50,7 +50,7 @@
         </service>
 
         <service
-            android:name=".ScreenLockerService"
+            android:name="com.handysparksoft.screentouchlocker.ScreenTouchLockerService"
             android:enabled="true"
             android:exported="true"
             android:label="@string/app_name"
@@ -58,12 +58,12 @@
             android:stopWithTask="false" />
 
         <service
-            android:name=".ShakeDetectorService"
+            android:name="com.handysparksoft.screentouchlocker.ShakeDetectorService"
             android:enabled="true"
-            android:exported="true"/>
+            android:exported="true" />
 
         <receiver
-            android:name=".BootReceiver"
+            android:name="com.handysparksoft.screentouchlocker.BootReceiver"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
