--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
     implementation "androidx.activity:activity-compose:1.4.0"
     implementation "androidx.lifecycle:lifecycle-service:2.4.1"
-    implementation 'com.squareup:seismic:1.0.3'
+    implementation "com.squareup:seismic:1.0.3"
+    implementation "com.google.accompanist:accompanist-pager:0.23.1"
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.23.1"
 
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
