--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity
             android:name="com.handysparksoft.screentouchlocker.MainActivity"
             android:exported="true"
+            android:launchMode="singleTask"
             android:theme="@style/Theme.ScreenTouchLocker">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
