--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        compose_version = '1.2.0-alpha08'
+        compose_version = '1.2.0-beta02'
     }
 
     repositories {
@@ -13,9 +13,9 @@ buildscript {
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.2.0-beta04' apply false
-    id 'com.android.library' version '7.2.0-beta04' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.20' apply false
+    id 'com.android.application' version '7.2.0-rc02' apply false
+    id 'com.android.library' version '7.2.0-rc02' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
     id 'com.diffplug.spotless' version '5.11.1'
 }
 
