Auto build the app and make the release files
Update GitHub Actions workflow to auto build the app and make release files.

* **GitHub Actions Workflow**:
  - Uncomment steps to run lint and build the project (debug and release).
  - Add a new step to upload the release APK as an artifact.

* **Gradle Build Configuration**:
  - Add a new build type for release builds.
  - Configure the release build type to sign the APK using the keystore.

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -29,8 +29,17 @@ jobs:
     - name: Run Tests
       run: ./gradlew test
 
-#      - name: Run Lint
-#        run: ./gradlew lint
+    - name: Run Lint
+      run: ./gradlew lint
 
-#      - name: Build Project (Debug)
-#        run: ./gradlew assembleDebug
+    - name: Build Project (Debug)
+      run: ./gradlew assembleDebug
+
+    - name: Build Project (Release)
+      run: ./gradlew assembleRelease
+
+    - name: Upload Release APK
+      uses: actions/upload-artifact@v2
+      with:
+        name: release-apk
+        path: app/build/outputs/apk/release/app-release.apk
