--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -48,3 +48,21 @@ jobs:
       with:
         name: release-apk
         path: app/build/outputs/apk/release/app-release.apk
+
+    - name: Decode Keystore
+      env:
+        ENCODED_KEYSTORE: ${{ secrets.KEYSTORE_FILE_BASE64 }}
+      run: |
+        mkdir -p ./keystore/keystore_new
+        echo $ENCODED_KEYSTORE | base64 --decode > ./keystore/keystore_new/screentouchlocker.jks
+
+    - name: Create keystore.properties
+      env:
+        KEYSTORE_KEY_ALIAS: ${{ secrets.KEYSTORE_KEY_ALIAS }}
+        KEYSTORE_KEY_PASSWORD: ${{ secrets.KEYSTORE_KEY_PASSWORD }}
+        KEYSTORE_STORE_PASSWORD: ${{ secrets.KEYSTORE_STORE_PASSWORD }}
+      run: |
+        echo "storeFile=./keystore/keystore_new/screentouchlocker.jks" > ./keystore/keystore_new/keystore_pkcs12.properties
+        echo "keyAlias=$KEYSTORE_KEY_ALIAS" >> ./keystore/keystore_new/keystore_pkcs12.properties
+        echo "keyPassword=$KEYSTORE_KEY_PASSWORD" >> ./keystore/keystore_new/keystore_pkcs12.properties
+        echo "storePassword=$KEYSTORE_STORE_PASSWORD" >> ./keystore/keystore_new/keystore_pkcs12.properties
