Add a step to check the value of `ENCODED_KEYSTORE` before decoding it
* Add a new step to echo the `ENCODED_KEYSTORE` value for debugging purposes

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -32,6 +32,9 @@ jobs:
         mkdir -p ./keystore/keystore_new
         echo $ENCODED_KEYSTORE | base64 --decode > ./keystore/keystore_new/screentouchlocker.jks
 
+    - name: Check ENCODED_KEYSTORE value
+      run: echo $ENCODED_KEYSTORE
+
     - name: Create keystore.properties
       env:
         KEYSTORE_KEY_ALIAS: ${{ secrets.KEYSTORE_KEY_ALIAS }}
