--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,6 +5,11 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  packages: write
 
 jobs:
   build:
@@ -19,7 +24,28 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: gradle
-        
+
+    - name: Decode Keystore
+      env:
+        ENCODED_KEYSTORE: ${{ secrets.KEYSTORE_FILE_BASE64 }}
+      run: |
+        mkdir -p ./keystore/keystore_new
+        echo $ENCODED_KEYSTORE | base64 --decode > ./keystore/keystore_new/screentouchlocker.jks
+
+    - name: Check ENCODED_KEYSTORE value
+      run: echo $ENCODED_KEYSTORE
+
+    - name: Create keystore.properties
+      env:
+        KEYSTORE_KEY_ALIAS: ${{ secrets.KEYSTORE_KEY_ALIAS }}
+        KEYSTORE_KEY_PASSWORD: ${{ secrets.KEYSTORE_KEY_PASSWORD }}
+        KEYSTORE_STORE_PASSWORD: ${{ secrets.KEYSTORE_STORE_PASSWORD }}
+      run: |
+        echo "storeFile=./keystore/keystore_new/screentouchlocker.jks" > ./keystore/keystore_new/keystore_pkcs12.properties
+        echo "keyAlias=$KEYSTORE_KEY_ALIAS" >> ./keystore/keystore_new/keystore_pkcs12.properties
+        echo "keyPassword=$KEYSTORE_KEY_PASSWORD" >> ./keystore/keystore_new/keystore_pkcs12.properties
+        echo "storePassword=$KEYSTORE_STORE_PASSWORD" >> ./keystore/keystore_new/keystore_pkcs12.properties
+
     - name: Run ktlint
       run: ./gradlew spotlessCheck
 
@@ -39,7 +65,7 @@ jobs:
       run: ./gradlew assembleRelease
 
     - name: Upload Release APK
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         name: release-apk
         path: app/build/outputs/apk/release/app-release.apk
