Fix keystore file not found error
Add a try-catch block to handle missing keystore file in `app/build.gradle`.

* Add a try-catch block around the `keystoreProperties.load` statement to handle the case when the keystore file is not found.
* Print a warning message if the keystore file is not found.
* Add a comment explaining the purpose of the try-catch block.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ try {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 } catch (Exception e) {
     println("WARNING! Keystore files not found! KeystoreProperties couldn't be loaded")
+    // This try-catch block is added to handle the case when the keystore file is not found
 }
 
 android {
